# slogin

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  nginx.conf  slogin.nomad  slogin.nomad.hcl
.chart/: Chart.yaml  values.yaml
.chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
.chart/templates/tests/: test-connection.yaml
.fluentd/: configmap.yaml  values.yaml
.github/workflows/: deploy.yaml  docker.yaml
.kibana/: values.yaml
.kubernetes/.es/: values.yaml
.pg/: pv.yaml  pvc.yaml  values.yaml
.redis/: values.yaml
be/: .env  .example.env  .gitignore  Cargo.toml  Dockerfile
be/src/: config.rs  controller.rs  dto.rs  main.rs  middleware.rs  route.rs
entity/: Cargo.toml
entity/src/entities/: user.rs
fe/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js
fe/src/: app.html  global.d.ts
fe/src/lib/: api.ts
fe/src/lib/components/: Nav.svelte
fe/src/lib/stores/: user.ts
fe/src/routes/: +layout.svelte  +page.svelte  __layout.svelte  index.svelte  signin.svelte  signup.svelte
fe/src/routes/signin/: +page.svelte
fe/src/routes/signup/: +page.svelte
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
migrations/: 20220110160927_user.sql
src/: config.rs  controller.rs  dto.rs  handler.rs  main.rs  middleware.rs  route.rs
src/entity/: mod.rs  prelude.rs  users.rs
src/handlers/: asset.rs
src/services/: asset.rs
src/storages/local/: asset.rs
