[package]
name = "slogin-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0.2"
actix-web = "=4.0.0-beta.19"
dotenv = "0.15.0"
chrono = "0.4.19"
env_logger = "0.9.0"
futures = "0.3.19"
jsonwebtoken = "7.2.0"
log = "0.4.14"
r2d2 = "0.8.9"
r2d2_redis = "0.14.0"
rand = "0.8.4"
redis = "0.21.4"
rust-argon2 = "1.0.0"
sea-orm = { version = "0.5.0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ], default-features = false }
serde = "1.0.133"
uuid = "0.8.2"
