[package]
name = "slogin-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0.2"
actix-web = "=4.3.1"
dotenv = "0.15.0"
chrono = "0.4.26"
env_logger = "0.10.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.19"
mime_guess = "2.0.4"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
rand = "0.8.5"
redis = "0.23.0"
rust-argon2 = "1.0.0"
rust-embed = "6.8.1"
sea-orm = { version = "0.11.3", features = [
    "sqlx-postgres",
    "runtime-actix-rustls",
    "macros",
    "with-chrono",
], default-features = false }
serde = "1.0.171"
uuid = { version = "1.4.1", features = ["v4"] }

entity = { path = "entity" }
migration = { path = "migration" }


[workspace]
members = [".", "entity", "migration"]
