[package]
name = "slogin-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.0.0-beta.19"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
r2d2 = "0.8.9"
r2d2_redis = "0.14.0"
redis = "0.21.4"
serde = "1.0.133"
